--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,14 @@
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "mbezhanov/faker-provider-collection": "^1.2",
-        "paypal/rest-api-sdk-php": "*"
+        "paypal/rest-api-sdk-php": "*",
+        "laravel/socialite": "^3.0",
+        "guzzlehttp/guzzle": "^6.3",
+        "maatwebsite/excel": "~2.1.0",
+        "spatie/laravel-permission": "^2.19"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.2",
         "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
