--- a/package.json
+++ b/package.json
@@ -22,8 +22,25 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
+        "@casl/ability": "^2.4.2",
+        "@casl/vue": "^0.4.3",
         "chart.js": "^2.7.2",
+        "jspdf": "^1.4.1",
+        "laravel-echo": "^1.4.0",
+        "pusher-js": "^4.3.1",
+        "v-toaster": "^1.0.3",
+        "vue-avatar": "^2.1.6",
+        "vue-barcode": "^1.1.0",
+        "vue-chartjs": "^3.4.0",
+        "vue-chartkick": "^0.3.3",
+        "vue-chat-scroll": "^1.3.3",
+        "vue-csv-import": "^1.6.0",
+        "vue-google-autocomplete": "^1.1.0",
+        "vue-json-excel": "^0.2.83",
+        "vue-pdf": "^3.3.1",
+        "vue-print-nb": "^1.0.3",
         "vue-router": "^3.0.1",
+        "vue2-google-maps": "^0.9.8",
         "vuetify": "^1.1.9"
     }
 }
