--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "v-toaster": "^1.0.3",
         "vue-avatar": "^2.1.6",
         "vue-barcode": "^1.1.0",
+        "vue-carousel": "^0.16.2",
         "vue-chartjs": "^3.4.0",
         "vue-chartkick": "^0.3.3",
         "vue-chat-scroll": "^1.3.3",
