--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "vue-router": "^3.0.1",
         "vue-scrollto": "^2.13.0",
         "vue-top-progress": "^0.7.0",
+        "vue-upload-multiple-image": "^1.1.2",
         "vue2-google-maps": "^0.9.8",
         "vuetify": "^1.1.9"
     }
